<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChangePasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:padding="16dp"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_title"
            android:textSize="30dp"
            android:textColor="#000"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/txtNew_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/change_password_new"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp" />


        <EditText
            android:id="@+id/txtNew_Confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/change_password_confirm"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            />



        <Button
            android:id="@+id/btnChange_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btnwhite"
            android:clickable="true"
            android:padding="16dp"
            android:text="@string/change_password_button"
            android:textAllCaps="true"
            android:textColor="#000000" />



    </LinearLayout>

</RelativeLayout>