<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/background"
    tools:context=".Fragments.ProfileFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/background"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/ic_launcher"
                    />

                <TextView
                    android:id="@+id/H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_below="@id/profile_image"
                    android:drawablePadding="6dp"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:drawableLeft="@drawable/username"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:layout_below="@id/profile_image"
                    android:layout_marginTop="25dp"
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:layout_toRightOf="@+id/H1"
                    android:id="@+id/username"
                    />


                <TextView
                    android:id="@+id/H2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/H1"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="30dp"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="6dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp" />


                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/mobile_number"
                    android:layout_below="@id/username"
                    android:layout_marginTop="6dp"
                    android:layout_toRightOf="@+id/H2"
                    android:inputType="phone"
                    android:textColor="#000"
                    android:textSize="20dp"
                    />


                <TextView
                    android:id="@+id/H3"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="6dp"
                    android:layout_below="@id/H2"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="30dp"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:enabled="false"
                    android:hint="@string/email_address"
                    android:layout_below="@id/mobile"
                    android:layout_toRightOf="@+id/H3"
                    android:layout_marginTop="6dp"
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:id="@+id/email"
                    />





                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_update"
                    android:layout_marginTop="15dp"
                    android:id="@+id/btn_profile_edit"
                    android:textColor="#000"
                    android:background="@drawable/btnwhite"
                    android:layout_below="@+id/email"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/change_password_button"
                    android:id="@+id/btn_profile_change"
                    android:textColor="#000"
                    android:background="@drawable/btnwhite"
                    android:layout_below="@+id/btn_profile_edit"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_delete"
                    android:layout_marginTop="10dp"
                    android:id="@+id/btn_profile_delete"
                    android:textColor="#000"
                    android:background="@drawable/btnwhite"
                    android:layout_below="@+id/btn_profile_change"
                    />

            </RelativeLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>


</RelativeLayout>